--- a/style.css
+++ b/style.css
@@ -4,15 +4,88 @@
 }
 
 #main-col {
-    height: auto;
+    height: 100vh;
     align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #brand {
     max-height: 60px;
+    margin-top: 60px;
 }
 
 #brand-logo {
     max-width: 60px;
     object-fit: cover;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: x-large;
+    margin-bottom: 0;
+}
+
+h2 {
+    font-size: x-large;
+    margin-bottom: 0;
+}
+
+h3 {
+    font-weight: light;
+    font-size: x-small;
+    margin-bottom: 0;
+}
+
+.items-container {
+    margin-bottom: 15px;
+}
+
+.item-container {
+    margin: 15px;
+}
+
+.item-image {
+    max-width: 100px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.item-info {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-right: 0px;
+}
+
+.item-name {
+    font-weight: bold;
+    font-size: medium;
+    margin-bottom: 0;
+}
+
+.item-description {
+    font-weight: lighter;
+    font-size: xx-small;
+    margin-bottom: 0;
+    line-height: 90%;
+}
+
+.item-price {
+    font-size: xx-small;
+    margin-bottom: 1px;
+}
+
+.item-add {
+    padding-block: 0px;
+    padding-inline: 12px;
+    border: 0px;
+    border-radius: 12px;
+}
+
+.item-add-text {
+    font-size: xx-small;
+    margin-bottom: 1px;
 }
