--- a/style.css
+++ b/style.css
@@ -16,12 +16,12 @@ body {
 }
 
 #brand {
-    max-height: 60px;
-    margin-top: 60px;
+    max-height: 3rem;
+    margin-top: 3rem;
 }
 
 #brand-logo {
-    max-width: 60px;
+    max-width: 3rem;
     object-fit: cover;
 }
 
@@ -62,7 +62,7 @@ h3 {
 }
 
 .item-image {
-    max-width: 100px;
+    max-width: 5rem;
     object-fit: fill;
     border-radius: 10px;
 }
