--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h3 {
 }
 
 .item-info {
-    height: 100px;
+    height: 5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -108,4 +108,5 @@ h3 {
     font-size: x-small;
     font-weight: 500;
     margin: 0;
+    color: black !important;
 }
