--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h2 {
     font-size: small;
     margin-top: 12px;
     margin-bottom: 6px;
-    color: goldenrod;
+    color: tan;
     font-family: 'Dancing Script', cursive;
 }
 
@@ -77,7 +77,7 @@ h3 {
 
 .item-name {
     font-weight: 500;
-    font-size: medium;
+    font-size: small;
     margin-bottom: 0;
     line-height: 100%;
 }
