--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
 }
 
 h1 {
+    max-width: 360px;
     font-weight: lighter;
     font-size: x-large;
     margin-bottom: 0;
@@ -37,15 +38,17 @@ h1 span {
 }
 
 h2 {
+    max-width: 360px;
     font-weight: bold;
     font-size: small;
-    margin-top: 12px;
+    margin-top: 18px;
     margin-bottom: 6px;
     color: tan;
     font-family: 'Dancing Script', cursive;
 }
 
 h3 {
+    max-width: 360px;
     font-size: large;
     margin-bottom: 12px;
     color: gray;
@@ -57,6 +60,7 @@ h3 {
 }
 
 .item-container {
+    max-width: 360px;
     margin: 0px;
     padding: 15px
 }
